# tower_of_hanoi

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  package.xml
.ci/: linting.sh
launch/: gazebo_spawn_discs.launch  move_iface.launch  move_sender.launch
meshes/: disc_100.dae  disc_60.dae  disc_80.dae
scripts/: tower_hanoi.py
urdf/: disc1.urdf.xacro  disc2.urdf.xacro  disc3.urdf.xacro
