<?xml version="1.0"?>
<package format="2">
  <name>tower_of_hanoi</name>
  <version>0.0.1</version>
  <description>Tower of Hanoi project for the KUKA Robot Learning Lab at KIT</description>

  <maintainer email="wolfgang.wiedmeyer@kit.edu">Wolfgang Wiedmeyer</maintainer>

  <license>GPLv3+</license>

  <author email="wolfgang.wiedmeyer@kit.edu">Wolfgang Wiedmeyer</author>

  <exec_depend>rll_moveit_config</exec_depend>
  <exec_depend>rll_move</exec_depend>
  <exec_depend>rll_move_client</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>

</package>
